tests/ui-nightly/transmute-ref-illegal-lifetime.stderr
error[E0597]: `x` does not live long enough
  --> tests/ui-nightly/transmute-ref-illegal-lifetime.rs:10:52
   |
8  |     let x = 0u64;
   |         - binding `x` declared here
9  |     // It is illegal to increase the lifetime scope.
10 |     let _: &'static u64 = zerocopy::transmute_ref!(&x);
   |            ------------                            ^^ borrowed value does not live long enough
   |            |
   |            type annotation requires that `x` is borrowed for `'static`
11 | }
   | - `x` dropped here while still borrowed
